# pipestep

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  sample_workflow.yml
.github/workflows/: ci.yml
pipestep/: __init__.py  __main__.py  actions.py  cli.py  engine.py  models.py  parser.py  tui.py
tests/: test_actions.py  test_engine.py  test_models.py  test_parser.py
tests/fixtures/: simple_workflow.yml
